syntax = "proto3";
package eth_proxy;

option go_package = "/api";
import "google/api/annotations.proto";

service EthService {
  rpc GetBlockByNumber(GetBlockByNumberRequest) returns (GetBlockByNumberResponse) {
    option (google.api.http) = {
      get: "/v1/block/{block_id}"
    };
  }

  rpc GetTx(GetTxRequest) returns (GetTxResponse) {
    option (google.api.http) = {
      get: "/v1/block/{block_id}/txs/{tx_id}"
    };
  }
}

message GetBlockByNumberRequest {
  string block_id = 1;
}

message GetBlockByNumberResponse {
  Block block = 1;
}

message GetTxRequest {
  string block_id = 1;
  string tx_id = 2;
}

message GetTxResponse {
  Transaction transaction = 1;
}

message Block {
  string difficulty = 1;
  string extra_data = 2;
  string gas_limit = 3;
  string gas_used = 4;
  string hash = 5;
  string logs_bloom = 6;
  string miner = 7;
  string mix_hash = 8;
  string nonce = 9;
  string number = 10;
  string parent_hash = 11;
  string receipts_root = 12;
  string sha3_uncles = 13;
  string size = 14;
  string state_root = 15;
  string timestamp = 16;
  string total_difficulty = 17;
  repeated Transaction transactions = 18;
  string transactions_root = 19;
  repeated string uncles = 20;
}

message Transaction {
  string block_hash = 1;
  string block_number = 2;
  string from = 3;
  string gas = 4;
  string gas_price = 5;
  string hash = 6;
  string input = 7;
  string nonce = 8;
  string to = 9;
  string transaction_index = 10;
  string value = 11;
  string v = 12;
  string r = 13;
  string s = 14;
}
